# ConfigFlowRegister

./: .env.template  .gitignore  ACCOUNT_POOL_DESIGN.md  README.md  config.json  config.json.template  configflow.spec  configflow_gui.spec  package-lock.json  pytest.ini  requirements.txt  test_imap.py  windsurf_accounts-2026-01-11--301个.json  windsurf_tool.spec
.specstory/: .project.json
WindsurfAPI-master/: README.md  RELEASE_NOTES_2.0.6.md  docker-compose.yml  nginx.conf  package.json
WindsurfAPI-master/docs/: index.html
WindsurfAPI-master/src/: auth.js  cache.js  caller-key.js  client.js  config.js  conversation-pool.js  image.js  index.js  langserver.js  net-safety.js  pdf.js  server.js  (+1 more)
account-pool-gui/: README.md  extract_icons.sh  index.html  package-lock.json  package.json  vite.config.ts
account-pool-gui/src-tauri/: Cargo.toml  tauri.conf.json
account-pool-gui/src-tauri/icons/: icon.icns
account-pool-gui/src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs  pool.rs
docs/: switch_windsurf_account.py  verify_api_login.py  verify_windsurf_auth.py  windsurf-switch-account-analysis.md
flows/: README.md  windsurf_register.toml
htmls/: Sign Up _ Windsurf.html  Sign Up _ Windsurf1.html
openspec/: project.md
scripts/: clean_exports.py  validate_flow.py
src/: cli.py  main.py
tests/: README.md  test_actions_and_runner.py  test_cli.py  test_config_loader.py  test_email_crypto_unit.py  test_email_otp_integration.py  test_email_otp_unit.py  test_flow_engine_runner.py  test_flow_loader_and_variable.py  test_utils_config_and_path.py
(+78 files in other folders)
