[package]
name = "account-pool-gui"
version = "0.1.0"
description = "账号池管理工具"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "account_pool_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "account-pool-gui"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
log = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
